deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yuri-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: yuri.kubernetes.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nodeport-service
                port:
                  number: 30080
